crates/pcb/tests/snapshots/release__publish_full.snap
---
source: crates/pcb/tests/release.rs
expression: sb.snapshot_dir(&staging_dir)
---
=== bom/design_bom.json
[
  {
    "path": "C1.C",
    "designator": "C1",
    "package": "0402",
    "value": "100nF",
    "description": "100nF",
    "component_type": "Capacitor",
    "capacitance": {
      "nominal": "0.000000100",
      "min": "0.000000100",
      "max": "0.000000100",
      "unit": "Farads"
    }
  },
  {
    "path": "C2.C",
    "designator": "C2",
    "package": "0805",
    "value": "10uF",
    "description": "10uF",
    "component_type": "Capacitor",
    "capacitance": {
      "nominal": "0.000010",
      "min": "0.000010",
      "max": "0.000010",
      "unit": "Farads"
    }
  },
  {
    "path": "LED1.D1.LED",
    "designator": "D1",
    "package": "0603",
    "value": "LED GREEN",
    "description": "LED GREEN"
  },
  {
    "path": "LED1.R1.R",
    "designator": "R1",
    "package": "0603",
    "value": "330",
    "description": "330",
    "component_type": "Resistor",
    "resistance": {
      "nominal": "330",
      "min": "330",
      "max": "330",
      "unit": "Ohms"
    }
  },
  {
    "path": "R1.R",
    "designator": "R2",
    "package": "0603",
    "value": "10k",
    "description": "10k",
    "component_type": "Resistor",
    "resistance": {
      "nominal": "10000",
      "min": "10000",
      "max": "10000",
      "unit": "Ohms"
    }
  }
]
=== diagnostics.json
{
  "boards/TestBoard.zen": [
    {
      "location": "<TEMP_DIR>/src/.pcb/releases/TestBoard-<GIT_HASH>/src/boards/modules/LedModule.zen:12:7-17",
      "severity": "warning",
      "body": "io() 'GND' in module 'LED1' is not connected to any ports",
      "suppressed": false,
      "occurrences": 1,
      "stack": []
    }
  ]
}
=== manufacturing/cpl.csv
Designator,Val,Package,Mid X,Mid Y,Rotation,Layer
"C1","100nF","C_0402_1005Metric",153.360000,-100.965000,0.000000,top
"C2","10uF","C_0805_2012Metric",148.700000,-100.445000,0.000000,top
"D1","LED GREEN","LED_0603_1608Metric",148.520000,-105.755000,0.000000,top
"R1","330","R_0603_1608Metric",148.480000,-104.205000,0.000000,top
"R2","10k","R_0603_1608Metric",153.530000,-105.795000,0.000000,top
=== metadata.json
{
  "git": {
    "branch": "main",
    "describe": "<GIT_HASH>",
    "hash": "<GIT_HASH>",
    "remotes": {
      "origin": "file://<TEMP_DIR>/origin.git"
    },
    "workspace": "<TEMP_DIR>/src"
  },
  "release": {
    "board_name": "TestBoard",
    "created_at": "<TIMESTAMP>",
    "git_version": "<GIT_HASH>",
    "layout_path": "boards/build/TestBoard",
    "schema_version": "1",
    "staging_directory": "<TEMP_DIR>/src/.pcb/releases/TestBoard-<GIT_HASH>",
    "workspace_root": "<TEMP_DIR>/src",
    "zen_file": "boards/TestBoard.zen"
  },
  "system": {
    "arch": "<ARCH>",
    "cli_version": "<CLI_VERSION>",
    "kicad_version": "<KICAD_VERSION>",
    "platform": "<PLATFORM>",
    "user": "<USER>"
  }
}
=== netlist.json <71281 bytes, sha256: f091ff8>
=== src/boards/TestBoard.zen

load("@stdlib/interfaces.zen", "Gpio")

Layout(name="TestBoard", path="build/TestBoard", bom_profile=None)

LedModule = Module("modules/LedModule.zen")
Resistor = Module("@stdlib/generics/Resistor.zen")
Capacitor = Module("@stdlib/generics/Capacitor.zen")

vcc_3v3 = Power("VCC_3V3")
gnd = Ground("GND")
led_ctrl = Gpio("LED_CTRL")

Capacitor(name = "C1", value = "100nF", package = "0402", P1 = vcc_3v3, P2 = gnd)
Capacitor(name = "C2", value = "10uF", package = "0805", P1 = vcc_3v3, P2 = gnd)

LedModule(name = "LED1", led_color = "green", VCC = vcc_3v3, GND = gnd, CTRL = led_ctrl)

Resistor(name = "R1", value = "10kOhm", package = "0603", P1 = vcc_3v3, P2 = led_ctrl)
=== src/boards/modules/LedModule.zen

load("@stdlib/interfaces.zen", "Gpio")

Resistor = Module("@stdlib/generics/Resistor.zen")
Led = Module("@stdlib/generics/Led.zen")

led_color = config(str, default = "red")
r_value = config(str, default = "330Ohm")
package = config(str, default = "0603")

VCC = io(Power)
GND = io(Ground)
CTRL = io(Gpio)

led_anode = Net("LED_ANODE")

Resistor(name = "R1", value = r_value, package = package, P1 = VCC, P2 = led_anode)
Led(name = "D1", color = led_color, package = package, A = led_anode, K = CTRL)
=== src/boards/pcb.toml

[board]
name = "TestBoard"
path = "TestBoard.zen"
=== src/pcb.toml

[workspace]
pcb-version = "0.3"
name = "test_workspace"

[dependencies]
"gitlab.com/kicad/libraries/kicad-symbols" = "9.0.3"
"gitlab.com/kicad/libraries/kicad-footprints" = "9.0.3"
