crates/pcb/tests/snapshots/release__release_with_file.snap
---
source: crates/pcb/tests/release.rs
expression: sb.snapshot_dir(staging_dir)
---
=== diagnostics.json
{
  "boards/TB0002.zen": []
}
=== metadata.json
{
  "git": {
    "describe": "unknown",
    "hash": "unknown",
    "remotes": {},
    "workspace": "<TEMP_DIR>/src"
  },
  "release": {
    "board_name": "TB0002",
    "created_at": "<TIMESTAMP>",
    "git_version": "unknown",
    "layout_path": "boards/build/TestBoard",
    "schema_version": "1",
    "source_only": true,
    "staging_directory": "<TEMP_DIR>/src/.pcb/releases/TB0002-unknown",
    "workspace_root": "<TEMP_DIR>/src",
    "zen_file": "boards/TB0002.zen"
  },
  "system": {
    "arch": "<ARCH>",
    "cli_version": "<CLI_VERSION>",
    "kicad_version": "<KICAD_VERSION>",
    "platform": "<PLATFORM>",
    "user": "<USER>"
  }
}
=== netlist.json
{"instances":{"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>":{"attributes":{"layout_path":{"String":"build/TestBoard"}},"children":{"foo":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo"},"kind":"Module","reference_designator":null,"type_ref":{"module_name":"<root>","source_path":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen"}},"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo":{"attributes":{"__signature":{"Json":{"parameters":[{"default_value":"10kOhm","has_default":true,"help":null,"is_config":true,"name":"value","optional":false,"typ":{"kind":"string"},"value":"10kOhm"},{"default_value":{"Net":{"id":11,"name":"P1","properties":{}}},"has_default":true,"help":null,"is_config":false,"name":"P1","optional":false,"typ":{"kind":"net"},"value":{"Net":{"id":9,"name":"VCC_3V3","properties":{}}}},{"default_value":{"Net":{"id":12,"name":"P2","properties":{}}},"has_default":true,"help":null,"is_config":false,"name":"P2","optional":false,"typ":{"kind":"net"},"value":{"Net":{"id":10,"name":"GND","properties":{}}}}]}}},"children":{"R":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R"},"kind":"Module","reference_designator":null,"type_ref":{"module_name":"<root>","source_path":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/modules/component.zen"}},"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R":{"attributes":{"datasheet":{"String":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/modules/datasheet.txt"},"description":{"String":"10kOhm"},"footprint":{"String":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/modules/test.kicad_mod"},"prefix":{"String":"R"},"type":{"String":"resistor"},"value":{"String":"10kOhm"}},"children":{"P1":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R.P1","P2":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R.P2"},"kind":"Component","reference_designator":"R1","type_ref":{"module_name":"R","source_path":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/modules/component.zen"}},"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R.P1":{"attributes":{"pads":{"Array":[{"String":"1"}]}},"children":{},"kind":"Port","reference_designator":null,"type_ref":{"module_name":"R","source_path":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/modules/component.zen"}},"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R.P2":{"attributes":{"pads":{"Array":[{"String":"2"}]}},"children":{},"kind":"Port","reference_designator":null,"type_ref":{"module_name":"R","source_path":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/modules/component.zen"}}},"moved_paths":{},"nets":{"GND":{"id":10,"kind":"Normal","name":"GND","ports":["<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R.P2"],"properties":{}},"VCC_3V3":{"id":9,"kind":"Normal","name":"VCC_3V3","ports":["<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>.foo.R.P1"],"properties":{}}},"root_ref":"<TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen:<root>","symbols":{}}
=== src/boards/TB0002.zen

SimpleComponent = Module("modules/component.zen")
add_property("layout_path", "build/TestBoard")
vcc_3v3 = Net("VCC_3V3")
gnd = Net("GND")
SimpleComponent(name = "foo", P1 = vcc_3v3, P2 = gnd)
=== src/boards/modules/component.zen

value = config("value", str, default = "10kOhm")

P1 = io("P1", Net)
P2 = io("P2", Net)

Component(
    name = "R",
    prefix = "R",
    footprint = File("test.kicad_mod"),
    pin_defs = {"P1": "1", "P2": "2"},
    pins = {"P1": P1, "P2": P2},
    properties = {
        "value": value,
        "type": "resistor",
        "datasheet": File("datasheet.txt"),
    }
)
=== src/boards/modules/datasheet.txt
Simple component datasheet.
=== src/boards/modules/test.kicad_mod
(footprint "test"
  (layer "F.Cu")
  (pad "1" smd rect (at -1 0) (size 1 1) (layers "F.Cu"))
  (pad "2" smd rect (at 1 0) (size 1 1) (layers "F.Cu"))
)
=== src/boards/pcb.toml

[board]
name = "TB0002"
path = "TB0002.zen"
=== src/pcb.toml

[workspace]
pcb-version = "0.3"
name = "test_workspace"
